--- a/blog_details.html
+++ b/blog_details.html
@@ -6,19 +6,19 @@
  <title>Gym trainer | Template </title>
  <meta name="description" content="">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+ <link rel="shortcut icon" type="image/x-icon" href="././assets/img/favicon.ico">
 
  <!-- CSS here -->
- <link rel="stylesheet" href="assets/css/bootstrap.min.css">
- <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
- <link rel="stylesheet" href="assets/css/slicknav.css">
- <link rel="stylesheet" href="assets/css/animate.min.css">
- <link rel="stylesheet" href="assets/css/magnific-popup.css">
- <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
- <link rel="stylesheet" href="assets/css/themify-icons.css">
- <link rel="stylesheet" href="assets/css/slick.css">
- <link rel="stylesheet" href="assets/css/nice-select.css">
- <link rel="stylesheet" href="assets/css/style.css">
+ <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+ <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+ <link rel="stylesheet" href="./assets/css/slicknav.css">
+ <link rel="stylesheet" href="./assets/css/animate.min.css">
+ <link rel="stylesheet" href="./assets/css/magnific-popup.css">
+ <link rel="stylesheet" href="./assets/css/fontawesome-all.min.css">
+ <link rel="stylesheet" href="./assets/css/themify-icons.css">
+ <link rel="stylesheet" href="./assets/css/slick.css">
+ <link rel="stylesheet" href="./assets/css/nice-select.css">
+ <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -42,31 +42,31 @@
         <div class="menu-wrapper d-flex align-items-center justify-content-between">
           <!-- Logo -->
           <div class="logo">
-            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+            <a href="./index.html"><img src="assets/img/logo/logo.png" alt=""></a>
           </div>
           <!-- Main-menu -->
           <div class="main-menu f-right d-none d-lg-block">
             <nav>
               <ul id="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="blog.html">Blog</a>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./courses.html">Courses</a></li>
+                <li><a href="./pricing.html">Pricing</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./blog.html">Blog</a>
                   <ul class="submenu">
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="blog_details.html">Blog Details</a></li>
-                    <li><a href="elements.html">Elements</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./blog_details.html">Blog Details</a></li>
+                    <li><a href="./elements.html">Elements</a></li>
                   </ul>
                 </li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </nav>
           </div>          
           <!-- Header-btn -->
           <div class="header-btns d-none d-lg-block f-right">
-           <a href="contact.html" class="btn">Contact me</a>
+           <a href="./contact.html" class="btn">Contact me</a>
          </div>
          <!-- Mobile Menu -->
          <div class="col-12">
@@ -108,8 +108,8 @@
          all gathered us saying he our
        </h2>
        <ul class="blog-info-link mt-3 mb-4">
-         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
-         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
+         <li><a href="./#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
+         <li><a href="./#"><i class="fa fa-comments"></i> 03 Comments</a></li>
        </ul>
        <p class="excert">
          MCSE boot camps have its supporters and its detractors. Some people do not understand why you
@@ -151,10 +151,10 @@
      <!-- <p class="comment-count"><span class="align-middle"><i class="fa fa-comment"></i></span> 06 Comments</p> -->
    </div>
    <ul class="social-icons">
-     <li><a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
-     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-     <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-     <li><a href="#"><i class="fab fa-behance"></i></a></li>
+     <li><a href="./https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
+     <li><a href="./#"><i class="fab fa-twitter"></i></a></li>
+     <li><a href="./#"><i class="fab fa-dribbble"></i></a></li>
+     <li><a href="./#"><i class="fab fa-behance"></i></a></li>
    </ul>
  </div>
  <div class="navigation-area">
@@ -162,18 +162,18 @@
    <div
    class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
    <div class="thumb">
-     <a href="#">
+     <a href="./#">
       <img class="img-fluid" src="assets/img/post/preview.png" alt="">
     </a>
   </div>
   <div class="arrow">
-   <a href="#">
+   <a href="./#">
     <span class="lnr text-white ti-arrow-left"></span>
   </a>
 </div>
 <div class="detials">
  <p>Prev Post</p>
- <a href="#">
+ <a href="./#">
   <h4 style="color: #2d2d2d;">Space The Final Frontier</h4>
 </a>
 </div>
@@ -182,17 +182,17 @@
 class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
 <div class="detials">
  <p>Next Post</p>
- <a href="#">
+ <a href="./#">
   <h4 style="color: #2d2d2d;">Telescopes 101</h4>
 </a>
 </div>
 <div class="arrow">
- <a href="#">
+ <a href="./#">
   <span class="lnr text-white ti-arrow-right"></span>
 </a>
 </div>
 <div class="thumb">
- <a href="#">
+ <a href="./#">
   <img class="img-fluid" src="assets/img/post/next.png" alt="">
 </a>
 </div>
@@ -204,7 +204,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
  <div class="media align-items-center">
   <img src="assets/img/blog/author.png" alt="">
   <div class="media-body">
-   <a href="#">
+   <a href="./#">
     <h4>Harvard milan</h4>
   </a>
   <p>Second divided from form fish beast made. Every of seas all gathered use saying you're, he
@@ -228,12 +228,12 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
     <div class="d-flex justify-content-between">
       <div class="d-flex align-items-center">
        <h5>
-        <a href="#">Emilly Blunt</a>
+        <a href="./#">Emilly Blunt</a>
       </h5>
       <p class="date">December 4, 2017 at 3:12 pm </p>
     </div>
     <div class="reply-btn">
-     <a href="#" class="btn-reply text-uppercase">reply</a>
+     <a href="./#" class="btn-reply text-uppercase">reply</a>
    </div>
  </div>
 </div>
@@ -254,12 +254,12 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
     <div class="d-flex justify-content-between">
       <div class="d-flex align-items-center">
        <h5>
-        <a href="#">Emilly Blunt</a>
+        <a href="./#">Emilly Blunt</a>
       </h5>
       <p class="date">December 4, 2017 at 3:12 pm </p>
     </div>
     <div class="reply-btn">
-     <a href="#" class="btn-reply text-uppercase">reply</a>
+     <a href="./#" class="btn-reply text-uppercase">reply</a>
    </div>
  </div>
 </div>
@@ -280,12 +280,12 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
     <div class="d-flex justify-content-between">
       <div class="d-flex align-items-center">
        <h5>
-        <a href="#">Emilly Blunt</a>
+        <a href="./#">Emilly Blunt</a>
       </h5>
       <p class="date">December 4, 2017 at 3:12 pm </p>
     </div>
     <div class="reply-btn">
-     <a href="#" class="btn-reply text-uppercase">reply</a>
+     <a href="./#" class="btn-reply text-uppercase">reply</a>
    </div>
  </div>
 </div>
@@ -346,37 +346,37 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
   <h4 class="widget_title" style="color: #2d2d2d;">Category</h4>
   <ul class="list cat-list">
    <li>
-    <a href="#" class="d-flex">
+    <a href="./#" class="d-flex">
      <p>Resaurant food</p>
      <p>(37)</p>
    </a>
  </li>
  <li>
-  <a href="#" class="d-flex">
+  <a href="./#" class="d-flex">
    <p>Travel news</p>
    <p>(10)</p>
  </a>
 </li>
 <li>
-  <a href="#" class="d-flex">
+  <a href="./#" class="d-flex">
    <p>Modern technology</p>
    <p>(03)</p>
  </a>
 </li>
 <li>
-  <a href="#" class="d-flex">
+  <a href="./#" class="d-flex">
    <p>Product</p>
    <p>(11)</p>
  </a>
 </li>
 <li>
-  <a href="#" class="d-flex">
+  <a href="./#" class="d-flex">
    <p>Inspiration</p>
    <p>(21)</p>
  </a>
 </li>
 <li>
-  <a href="#" class="d-flex">
+  <a href="./#" class="d-flex">
    <p>Health Care</p>
    <p>(21)</p>
  </a>
@@ -388,7 +388,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
   <div class="media post_item">
    <img src="assets/img/post/post_1.png" alt="post">
    <div class="media-body">
-    <a href="blog_details.html">
+    <a href="./blog_details.html">
      <h3 style="color: #2d2d2d;">From life was you fish...</h3>
    </a>
    <p>January 12, 2019</p>
@@ -397,7 +397,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
 <div class="media post_item">
  <img src="assets/img/post/post_2.png" alt="post">
  <div class="media-body">
-  <a href="blog_details.html">
+  <a href="./blog_details.html">
    <h3 style="color: #2d2d2d;">The Amazing Hubble</h3>
  </a>
  <p>02 Hours ago</p>
@@ -406,7 +406,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
 <div class="media post_item">
  <img src="assets/img/post/post_3.png" alt="post">
  <div class="media-body">
-  <a href="blog_details.html">
+  <a href="./blog_details.html">
    <h3 style="color: #2d2d2d;">Astronomy Or Astrology</h3>
  </a>
  <p>03 Hours ago</p>
@@ -415,7 +415,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
 <div class="media post_item">
  <img src="assets/img/post/post_4.png" alt="post">
  <div class="media-body">
-  <a href="blog_details.html">
+  <a href="./blog_details.html">
    <h3 style="color: #2d2d2d;">Asteroids telescope</h3>
  </a>
  <p>01 Hours ago</p>
@@ -426,28 +426,28 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
   <h4 class="widget_title" style="color: #2d2d2d;">Tag Clouds</h4>
   <ul class="list">
    <li>
-    <a href="#">project</a>
+    <a href="./#">project</a>
   </li>
   <li>
-    <a href="#">love</a>
+    <a href="./#">love</a>
   </li>
   <li>
-    <a href="#">technology</a>
+    <a href="./#">technology</a>
   </li>
   <li>
-    <a href="#">travel</a>
+    <a href="./#">travel</a>
   </li>
   <li>
-    <a href="#">restaurant</a>
+    <a href="./#">restaurant</a>
   </li>
   <li>
-    <a href="#">life style</a>
+    <a href="./#">life style</a>
   </li>
   <li>
-    <a href="#">design</a>
+    <a href="./#">design</a>
   </li>
   <li>
-    <a href="#">illustration</a>
+    <a href="./#">illustration</a>
   </li>
 </ul>
 </aside>
@@ -455,32 +455,32 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
   <h4 class="widget_title" style="color: #2d2d2d;">Instagram Feeds</h4>
   <ul class="instagram_row flex-wrap">
    <li>
-    <a href="#">
+    <a href="./#">
      <img class="img-fluid" src="assets/img/post/post_5.png" alt="">
    </a>
  </li>
  <li>
-  <a href="#">
+  <a href="./#">
    <img class="img-fluid" src="assets/img/post/post_6.png" alt="">
  </a>
 </li>
 <li>
-  <a href="#">
+  <a href="./#">
    <img class="img-fluid" src="assets/img/post/post_7.png" alt="">
  </a>
 </li>
 <li>
-  <a href="#">
+  <a href="./#">
    <img class="img-fluid" src="assets/img/post/post_8.png" alt="">
  </a>
 </li>
 <li>
-  <a href="#">
+  <a href="./#">
    <img class="img-fluid" src="assets/img/post/post_9.png" alt="">
  </a>
 </li>
 <li>
-  <a href="#">
+  <a href="./#">
    <img class="img-fluid" src="assets/img/post/post_10.png" alt="">
  </a>
 </li>
@@ -557,7 +557,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
             <div class="single-footer-caption mb-50 text-center">
               <!-- logo -->
               <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                <a href="./index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
               </div>
               <!-- Menu -->
               <!-- Header Start -->
@@ -568,12 +568,12 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
                     <div class="main-menu main-menu2 text-center">
                       <nav>
                         <ul>
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="about.html">About</a></li>
-                          <li><a href="courses.html">Courses</a></li>
-                          <li><a href="pricing.html">Pricing</a></li>
-                          <li><a href="gallery.html">Gallery</a></li>
-                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="./index.html">Home</a></li>
+                          <li><a href="./about.html">About</a></li>
+                          <li><a href="./courses.html">Courses</a></li>
+                          <li><a href="./pricing.html">Pricing</a></li>
+                          <li><a href="./gallery.html">Gallery</a></li>
+                          <li><a href="./contact.html">Contact</a></li>
                         </ul>
                       </nav>
                     </div>   
@@ -583,9 +583,9 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
               <!-- Header End -->
               <!-- social -->
               <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                <a href="./#"><i class="fab fa-twitter"></i></a>
+                <a href="./https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                <a href="./#"><i class="fab fa-pinterest-p"></i></a>
               </div>
             </div>
           </div>
@@ -597,7 +597,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
           <div class="col-lg-12">
             <div class="footer-copy-right text-center">
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="./https://colorlib.com" target="_blank">Colorlib</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
               </div>
             </div>
@@ -609,7 +609,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
   </footer>
   <!-- Scroll Up -->
   <div id="back-top" >
-   <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+   <a title="Go to Top" href="./#"> <i class="fas fa-level-up-alt"></i></a>
  </div>
 
  <!-- JS here -->
