--- a/courses.html
+++ b/courses.html
@@ -6,23 +6,23 @@
     <title>Gym trainer | Template </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="manifest" href="././site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="././assets/img/favicon.ico">
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/flaticon.css">
-    <link rel="stylesheet" href="assets/css/gijgo.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/animated-headline.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="././assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="././assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="././assets/css/slicknav.css">
+    <link rel="stylesheet" href="././assets/css/flaticon.css">
+    <link rel="stylesheet" href="././assets/css/gijgo.css">
+    <link rel="stylesheet" href="././assets/css/animate.min.css">
+    <link rel="stylesheet" href="././assets/css/animated-headline.css">
+    <link rel="stylesheet" href="././assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="././assets/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="././assets/css/themify-icons.css">
+    <link rel="stylesheet" href="././assets/css/slick.css">
+    <link rel="stylesheet" href="././assets/css/nice-select.css">
+    <link rel="stylesheet" href="././assets/css/style.css">
 </head>
 <body class="black-bg">
     <!-- ? Preloader Start -->
@@ -45,31 +45,31 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="././index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="blog.html">Blog</a>
+                                    <li><a href="././index.html">Home</a></li>
+                                    <li><a href="././about.html">About</a></li>
+                                    <li><a href="././courses.html">Courses</a></li>
+                                    <li><a href="././pricing.html">Pricing</a></li>
+                                    <li><a href="././gallery.html">Gallery</a></li>
+                                    <li><a href="././blog.html">Blog</a>
                                         <ul class="submenu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog_details.html">Blog Details</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="././blog.html">Blog</a></li>
+                                            <li><a href="././blog_details.html">Blog Details</a></li>
+                                            <li><a href="././elements.html">Elements</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="././contact.html">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                           <a href="contact.html" class="btn">Contact me</a>
+                           <a href="././contact.html" class="btn">Contact me</a>
                        </div>
                        <!-- Mobile Menu -->
                        <div class="col-12">
@@ -114,7 +114,7 @@
                             <img src="assets/img/gallery/team1.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Body Building</a></h5>
+                            <h5><a href="././services.html">Body Building</a></h5>
                             <p>You’ll look at graphs and charts in Task One, how to approach the task </p>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <img src="assets/img/gallery/team2.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Muscle Gain</a></h5>
+                            <h5><a href="././services.html">Muscle Gain</a></h5>
                             <p>You’ll look at graphs and charts in Task One, how to approach the task </p>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             <img src="assets/img/gallery/team3.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Weight Loss</a></h5>
+                            <h5><a href="././services.html">Weight Loss</a></h5>
                             <p>You’ll look at graphs and charts in Task One, how to approach the task </p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 <div class="topic-content">
                                     <h3>Personal traning</h3>
                                     <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="courses.html" class="border-btn">View Courses</a>
+                                    <a href="././courses.html" class="border-btn">View Courses</a>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 <div class="topic-content">
                                     <h3>Group traning</h3>
                                     <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="courses.html" class="btn">View Courses</a>
+                                    <a href="././courses.html" class="btn">View Courses</a>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="video-wrap position-relative">
                 <div class="video-icon" >
-                    <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
+                    <a class="popup-video btn-icon" href="././https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
                 </div>
             </div>
         </div>
@@ -246,7 +246,7 @@
                         <div class="single-footer-caption mb-50 text-center">
                             <!-- logo -->
                             <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <a href="././index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                             </div>
                             <!-- Menu -->
                             <!-- Header Start -->
@@ -257,12 +257,12 @@
                                         <div class="main-menu main-menu2 text-center">
                                             <nav>
                                                 <ul>
-                                                    <li><a href="index.html">Home</a></li>
-                                                    <li><a href="about.html">About</a></li>
-                                                    <li><a href="courses.html">Courses</a></li>
-                                                    <li><a href="pricing.html">Pricing</a></li>
-                                                    <li><a href="gallery.html">Gallery</a></li>
-                                                    <li><a href="contact.html">Contact</a></li>
+                                                    <li><a href="././index.html">Home</a></li>
+                                                    <li><a href="././about.html">About</a></li>
+                                                    <li><a href="././courses.html">Courses</a></li>
+                                                    <li><a href="././pricing.html">Pricing</a></li>
+                                                    <li><a href="././gallery.html">Gallery</a></li>
+                                                    <li><a href="././contact.html">Contact</a></li>
                                                 </ul>
                                             </nav>
                                         </div>   
@@ -272,9 +272,9 @@
                             <!-- Header End -->
                             <!-- social -->
                             <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="././#"><i class="fab fa-twitter"></i></a>
+                                <a href="././https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                <a href="././#"><i class="fab fa-pinterest-p"></i></a>
                             </div>
                         </div>
                     </div>
@@ -286,7 +286,7 @@
                     <div class="col-lg-12">
                         <div class="footer-copy-right text-center">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="././https://colorlib.com" target="_blank">Colorlib</a>
                               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                           </div>
                       </div>
@@ -298,7 +298,7 @@
   </footer>
   <!-- Scroll Up -->
   <div id="back-top" >
-    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+    <a title="Go to Top" href="././#"> <i class="fas fa-level-up-alt"></i></a>
 </div>
 
 <!-- JS here -->
