--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <title>DaHouse</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.png">
+    <link rel="stylesheet" href="./https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/flaticon.css">
-    <link rel="stylesheet" href="assets/css/gijgo.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/animated-headline.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./assets/css/slicknav.css">
+    <link rel="stylesheet" href="./assets/css/flaticon.css">
+    <link rel="stylesheet" href="./assets/css/gijgo.css">
+    <link rel="stylesheet" href="./assets/css/animate.min.css">
+    <link rel="stylesheet" href="./assets/css/animated-headline.css">
+    <link rel="stylesheet" href="./assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="./assets/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="./assets/css/themify-icons.css">
+    <link rel="stylesheet" href="./assets/css/slick.css">
+    <link rel="stylesheet" href="./assets/css/nice-select.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body class="black-bg">
     <!-- ? Preloader Start -->
@@ -47,24 +47,24 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="./index.html">Home</a></li>
 
                                     
-                                    <li><a href="">About</a></li>
-                                    <li><a href="coaches.php">Coaches</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">Gallery</a></li>
-                                    <li><a href="#">Blog</a>
+                                    <li><a href="./">About</a></li>
+                                    <li><a href="./coaches.php">Coaches</a></li>
+                                    <li><a href="./#">Pricing</a></li>
+                                    <li><a href="./#">Gallery</a></li>
+                                    <li><a href="./#">Blog</a>
                                         <!-- <ul class="submenu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog_details.html">Blog Details</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="./blog.html">Blog</a></li>
+                                            <li><a href="./blog_details.html">Blog Details</a></li>
+                                            <li><a href="./elements.html">Elements</a></li>
                                         </ul> -->
                                     </li>
                                 </ul>
@@ -72,7 +72,7 @@
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                           <a href="contact.html" class="btn">Contacto</a>
+                           <a href="./contact.html" class="btn">Contacto</a>
                        </div>
                        <!-- Mobile Menu -->
                        <div class="col-12">
@@ -97,7 +97,7 @@
                                 <span data-animation="fadeInLeft" data-delay="0.1s">TEAM</span>
                                 <h1 data-animation="fadeInLeft" data-delay="0.4s">DAHOUSE</h1>
                                 <!-- El a va courses.html -->
-                                <a href="#" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Clases</a>
+                                <a href="./#" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Clases</a>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <div class="topic-content">
                                     <h3>Crossfit</h3>
                                     <p>Lorem ipsum dolor sit amet. <br> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                                    <a href="#" class="border-btn">more info</a>
+                                    <a href="./#" class="border-btn">more info</a>
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                 <div class="topic-content">
                                     <h3>Dances class</h3>
                                     <p>Lorem ipsum dolor sit amet. <br> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                                    <a href="#" class="btn">more info</a>
+                                    <a href="./#" class="btn">more info</a>
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                             <img src="assets/img/gallery/team1.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Lorem.</a></h5>
+                            <h5><a href="./services.html">Lorem.</a></h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, optio! </p>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                             <img src="assets/img/gallery/team2.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Lorem.</a></h5>
+                            <h5><a href="./services.html">Lorem.</a></h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, iusto? </p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                             <img src="assets/img/gallery/team3.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Lorem.</a></h5>
+                            <h5><a href="./services.html">Lorem.</a></h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, laborum. </p>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                                         <p>Month to mouth</p>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Join Now</a>
+                                <a href="./#" class="border-btn border-btn2">Join Now</a>
                             </div>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                                         <p>Month to mouth</p>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Join Now</a>
+                                <a href="./#" class="border-btn border-btn2">Join Now</a>
                             </div>
                         </div>
                     </div>
@@ -359,7 +359,7 @@
                                         <p>Month to mouth</p>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Join Now</a>
+                                <a href="./#" class="border-btn border-btn2">Join Now</a>
                             </div>
                         </div>
                     </div>
@@ -379,7 +379,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href="./gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href="./gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href="./gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="fas fa-plus"></i></a>
+                                <a href="./gallery.html"><i class="fas fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="fas fa-plus"></i></a>
+                                <a href="./gallery.html"><i class="fas fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -434,7 +434,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
-                                <a href="gallery.html"><i class="fas fa-plus"></i></a>
+                                <a href="./gallery.html"><i class="fas fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -460,7 +460,7 @@
                         <h2 class="">About us </h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quidem at laboriosam incidunt officiis alias odit? Iusto tenetur maiores quaerat?</p>
                         <p class="mb-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque rerum beatae iste ab, laborum dolorum odit fugiat porro inventore dolores, officia exercitationem dolore nisi! Illo magni neque laudantium, sunt earum necessitatibus soluta</p>
-                        <a href="#" class="border-btn">contact</a>
+                        <a href="./#" class="border-btn">contact</a>
                     </div>
                 </div>
             </div>
@@ -487,7 +487,7 @@
                             </div>
                             <div class="blog-cap">
                                 <span>Gym & Fitness</span>
-                                <h3><a href="blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
+                                <h3><a href="./blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
                             </div>
                         </div>
                     </div>
@@ -500,7 +500,7 @@
                             </div>
                             <div class="blog-cap">
                                 <span>Gym & Fitness</span>
-                                <h3><a href="blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
+                                <h3><a href="./blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
                             </div>
                         </div>
                     </div>
@@ -514,7 +514,7 @@
         <div class="container">
             <div class="video-wrap position-relative">
                 <div class="video-icon" >
-                    <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=wZGv6qx0IR0"><i class="fas fa-play"></i></a>
+                    <a class="popup-video btn-icon" href="./https://www.youtube.com/watch?v=wZGv6qx0IR0"><i class="fas fa-play"></i></a>
                 </div>
             </div>
         </div>
@@ -574,7 +574,7 @@
                         <div class="single-footer-caption mb-50 text-center">
                             <!-- logo -->
                             <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="./index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                             <!-- Menu -->
                             <!-- Header Start -->
@@ -585,12 +585,12 @@
                                         <div class="main-menu main-menu2 text-center">
                                             <nav>
                                                 <ul>
-                                                    <li><a href="index.html">Home</a></li>
-                                                    <li><a href="#">About</a></li>
-                                                    <li><a href="#">Courses</a></li>
-                                                    <li><a href="#">Pricing</a></li>
-                                                    <li><a href="#">Gallery</a></li>
-                                                    <li><a href="#">Contact</a></li>
+                                                    <li><a href="./index.html">Home</a></li>
+                                                    <li><a href="./#">About</a></li>
+                                                    <li><a href="./#">Courses</a></li>
+                                                    <li><a href="./#">Pricing</a></li>
+                                                    <li><a href="./#">Gallery</a></li>
+                                                    <li><a href="./#">Contact</a></li>
                                                 </ul>
                                             </nav>
                                         </div>   
@@ -600,8 +600,8 @@
                             <!-- Header End -->
                             <!-- social -->
                             <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="./#"><i class="fab fa-twitter"></i></a>
+                                <a href="./#"><i class="fab fa-facebook-f"></i></a>
                             </div>
                         </div>
                     </div>
@@ -624,7 +624,7 @@
   </footer>
   <!-- Scroll Up -->
   <div id="back-top" >
-    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+    <a title="Go to Top" href="./#"> <i class="fas fa-level-up-alt"></i></a>
 </div>
 
 <!-- JS here -->
